syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ilyaproject.api";
option java_outer_classname = "OrderProto";

package payment;

service OrderService {
  rpc OrderValidation (OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
  int64 courseId = 1;
  int64 customerId = 2;
}

message OrderResponse {
  bool isValid = 1;
}